[package]
name = "aoc-2021-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.7"
regex = "1.5.4"
lazy_static = "1.4.0"
itertools = "0.10.3"

[dependencies.web-sys]
version = "0.3.55"
features = ["console"]
